--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul class="our-strangths-list">
             <li class="our-strangths-item">
               <div class="our-str-icon-box">
-                <svg  class="our-str-icon" width="64" height="64">
+                <svg class="our-str-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
@@ -276,10 +276,10 @@
             <li class="portfolio-card">
               <div class="overlay-wrapper">
                 <img class="picture" src="./images/img-2.jpg" alt="first photo" />
-                  <p class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                    Fruit Ecommerce App · Cloud Storage App
-                  </p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-naming">
                 <h3 class="project-name">Banking App</h3>
@@ -289,10 +289,10 @@
             <li class="portfolio-card">
               <div class="overlay-wrapper">
                 <img src="./images/img-3.jpg" alt="Second photo" />
-                  <p class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                    Fruit Ecommerce App · Cloud Storage App
-                  </p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-naming">
                 <h3 class="project-name">Cashless Payment</h3>
@@ -300,13 +300,13 @@
               </div>
             </li>
             <li class="portfolio-card">
-             <div class="overlay-wrapper">
-              <img src="./images/img-4.jpg" alt="Third photo" />
+              <div class="overlay-wrapper">
+                <img src="./images/img-4.jpg" alt="Third photo" />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
                 </p>
-            </div>
+              </div>
               <div class="portfolio-naming">
                 <h3 class="project-name">Meditation App</h3>
                 <p class="portfolio-paragraph">App</p>
@@ -314,7 +314,7 @@
             </li>
             <li class="portfolio-card">
               <div class="overlay-wrapper">
-              <img src="./images/img-5.jpg" alt="Fourth photo" />
+                <img src="./images/img-5.jpg" alt="Fourth photo" />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
@@ -324,11 +324,11 @@
                 <h3 class="project-name">Taxi Service</h3>
                 <p class="portfolio-paragraph">Marketing</p>
               </div>
-          
+
             </li>
             <li class="portfolio-card">
               <div class="overlay-wrapper">
-              <img src="./images/img-6.jpg" alt="Fifth photo" />
+                <img src="./images/img-6.jpg" alt="Fifth photo" />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
@@ -342,10 +342,10 @@
             <li class="portfolio-card">
               <div class="overlay-wrapper">
                 <img src="./images/img-7.jpg" alt="Sixth photo" />
-                  <p class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                    Fruit Ecommerce App · Cloud Storage App
-                  </p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-naming">
                 <h3 class="project-name">Online Courses</h3>
@@ -394,7 +394,7 @@
             </li>
             <li class="soc-media-footer">
               <a href="#" class="social-list-link-footer">
-                <svg class="soc-list-icon-footer"  width="24" height="24">
+                <svg class="soc-list-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
@@ -404,7 +404,82 @@
 
       </div>
     </footer>
+
+    <div class="backdrop is-open">
+      <div class="modal">
+
+        <button class="modal-close-btn" type="button" aria-label="modal close button">
+          <svg class="modal-close-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-cta-paragraph">Leave your contacts and we will call you back</p>
+
+        <form>
+          <div class="cta-form-wrapper">
+            <label class="cta-form-label" for="user-first-name">Name
+              <div class="cta-form-input-icon-wrapper">
+                <input class="cta-form-input" type="text" name="user_first_name" id="user-first-name" required
+                  pattern="[a-zA-Zа-яА-ЯІіЇїєЄҐґйЙ']+" title="Nataliia">
+                <svg class="cta-form-input-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="cta-form-wrapper">
+            <label class="cta-form-label" for="user-telephone">Phone
+              <div class="cta-form-input-icon-wrapper">
+                <input class="cta-form-input" type="tel" name="user_telephone" id="user-telephone" required ]
+                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx">
+                <svg class="cta-form-input-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="cta-form-wrapper">
+            <label class="cta-form-label" for="user-email">Email
+              <div class="cta-form-input-icon-wrapper">
+                <input class="cta-form-input" type="email" name="user_email" id="user-email" required>
+                <svg class="cta-form-input-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="cta-form-wrapper">
+            <label class="cta-form-label" for="comment">Comment
+              <textarea class="cta-form-textarea" id="comment" placeholder="Text input" name="comment"
+                itemid="comment"></textarea>
+            </label>
+          </div>
+
+
+          <div class="cta-checkbox-wrapper">
+            <input class="cta-checkbox visually-hidden" type="checkbox" name="privat_policy_check" value="true"
+              id="privat-policy-check" required>
+            <label class="cta-checkbox-label" for="privat-policy-check">
+              <span class="cta-own-checkbox">
+                <svg class="cta-own-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="privacy-policy" href="/">Privacy Policy</a>
+            </label>
+          </div>
+
+          <button class="cta-button" type="submit">Send</button>
+
+
+
+        </form>
+      </div>
+    </div>
+
   </div>
 </body>
+
 
 </html>
