--- a/index.html
+++ b/index.html
@@ -403,55 +403,59 @@
         </div>
 
       </div>
+      <div class="subscribe">
+        <p class="subscribe-paragraph"></p>
+      </div>
     </footer>
-
-    <div class="backdrop is-open">
+    <div class="backdrop ">
       <div class="modal">
-
+        <p class="modal-cta-paragraph">Leave your contacts and we will call you back</p>
         <button class="modal-close-btn" type="button" aria-label="modal close button">
           <svg class="modal-close-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="modal-cta-paragraph">Leave your contacts and we will call you back</p>
+
 
         <form>
           <div class="cta-form-wrapper">
             <label class="cta-form-label" for="user-first-name">Name
-              <div class="cta-form-input-icon-wrapper">
-                <input class="cta-form-input" type="text" name="user_first_name" id="user-first-name" required
-                  pattern="[a-zA-Zа-яА-ЯІіЇїєЄҐґйЙ']+" title="Nataliia">
-                <svg class="cta-form-input-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-              </div>
             </label>
+            <div class="cta-form-input-icon-wrapper">
+              <input class="cta-form-input" type="text" name="user_first_name" id="user-first-name" required
+                pattern="[a-zA-Zа-яА-ЯІіЇїєЄҐґйЙ']+" title="Nataliia">
+              <svg class="cta-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
           <div class="cta-form-wrapper">
             <label class="cta-form-label" for="user-telephone">Phone
-              <div class="cta-form-input-icon-wrapper">
-                <input class="cta-form-input" type="tel" name="user_telephone" id="user-telephone" required ]
-                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx">
-                <svg class="cta-form-input-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-phone"></use>
-                </svg>
-              </div>
             </label>
+            <div class="cta-form-input-icon-wrapper">
+              <input class="cta-form-input" type="tel" name="user_telephone" id="user-telephone" required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx">
+              <svg class="cta-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="cta-form-wrapper">
             <label class="cta-form-label" for="user-email">Email
-              <div class="cta-form-input-icon-wrapper">
-                <input class="cta-form-input" type="email" name="user_email" id="user-email" required>
-                <svg class="cta-form-input-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-              </div>
+
             </label>
+            <div class="cta-form-input-icon-wrapper">
+              <input class="cta-form-input" type="email" name="user_email" id="user-email" required>
+              <svg class="cta-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
           <div class="cta-form-wrapper">
             <label class="cta-form-label" for="comment">Comment
-              <textarea class="cta-form-textarea" id="comment" placeholder="Text input" name="comment"
-                itemid="comment"></textarea>
+              <textarea class="cta-form-textarea" id="comment" placeholder="Text input" name="comment">
+
+              </textarea>
             </label>
           </div>
 
@@ -477,6 +481,7 @@
         </form>
       </div>
     </div>
+
 
   </div>
 </body>
