--- a/index.html
+++ b/index.html
@@ -401,13 +401,28 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-block">
+          <p class="subscribe-paragraph">Subscribe</p>
+          <form class="cta-footer-input-form">
+            <label class="cta-form-label-subs" for="user_email_subscription">
+              <input class="cta-footer-input" type="email" name="user_email_subscription" id="user-email"
+                placeholder="E-mail">
+            </label>
+            <button class="sub-button" type="submit">Subscribe
+              <svg class="sub-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+      </div>
 
-      </div>
-      <div class="subscribe">
-        <p class="subscribe-paragraph"></p>
-      </div>
+
+
     </footer>
-    <div class="backdrop ">
+
+
+    <div class="backdrop">
       <div class="modal">
         <p class="modal-cta-paragraph">Leave your contacts and we will call you back</p>
         <button class="modal-close-btn" type="button" aria-label="modal close button">
