--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
         <div class="subscribe-block">
           <p class="subscribe-paragraph">Subscribe</p>
           <form class="cta-footer-input-form">
-            <label class="cta-form-label-subs" for="user_email_subscription">
-              <input class="cta-footer-input" type="email" name="user_email_subscription" id="user-email"
+            <label class="cta-form-label-subs" for="user-email-subscription">
+              <input class="cta-footer-input" type="email" name="user_email_subscription" id="user-email-subscription"
                 placeholder="E-mail">
             </label>
             <button class="sub-button" type="submit">Subscribe
