--- a/index.html
+++ b/index.html
@@ -416,13 +416,8 @@
           </form>
         </div>
       </div>
-
-
-
     </footer>
-
-
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <p class="modal-cta-paragraph">Leave your contacts and we will call you back</p>
         <button class="modal-close-btn" type="button" aria-label="modal close button">
@@ -430,8 +425,6 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-
-
         <form>
           <div class="cta-form-wrapper">
             <label class="cta-form-label" for="user-first-name">Name
@@ -490,13 +483,9 @@
           </div>
 
           <button class="cta-button" type="submit">Send</button>
-
-
-
         </form>
       </div>
     </div>
-
 
   </div>
 </body>
