--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
         <div class="subscribe-block">
           <p class="subscribe-paragraph">Subscribe</p>
           <form class="cta-footer-input-form">
-            <label class="cta-form-label-subs" for="user-email-subscription">
-              <input class="cta-footer-input" type="email" name="user_email_subscription" id="user-email-subscription"
+            <label class="cta-form-label-subs" for="user_email_subscription">
+              <input class="cta-footer-input" type="email" name="user-email-subscription" id="user_email_subscription"
                 placeholder="E-mail">
             </label>
             <button class="sub-button" type="submit">Subscribe
@@ -417,6 +417,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- ======================Backdrop============================== -->
     <div class="backdrop is-open">
       <div class="modal">
         <p class="modal-cta-paragraph">Leave your contacts and we will call you back</p>
@@ -438,8 +440,7 @@
             </div>
           </div>
           <div class="cta-form-wrapper">
-            <label class="cta-form-label" for="user-telephone">Phone
-            </label>
+            <label class="cta-form-label" for="user-telephone">Phone</label>
             <div class="cta-form-input-icon-wrapper">
               <input class="cta-form-input" type="tel" name="user_telephone" id="user-telephone" required
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx">
@@ -449,9 +450,7 @@
             </div>
           </div>
           <div class="cta-form-wrapper">
-            <label class="cta-form-label" for="user-email">Email
-
-            </label>
+            <label class="cta-form-label" for="user-email">Email</label>
             <div class="cta-form-input-icon-wrapper">
               <input class="cta-form-input" type="email" name="user_email" id="user-email" required>
               <svg class="cta-form-input-icon" width="18" height="18">
@@ -460,13 +459,10 @@
             </div>
           </div>
           <div class="cta-form-wrapper">
-            <label class="cta-form-label" for="comment">Comment
-              <textarea class="cta-form-textarea" id="comment" placeholder="Text input" name="comment">
+            <label class="cta-form-label" for="comment">Comment</label>
+            <textarea class="cta-form-textarea" id="comment" placeholder="Text input" name="comment"></textarea>
 
-              </textarea>
-            </label>
           </div>
-
 
           <div class="cta-checkbox-wrapper">
             <input class="cta-checkbox visually-hidden" type="checkbox" name="privat_policy_check" value="true"
