--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     </footer>
 
     <!-- ======================Backdrop============================== -->
-    <div class="backdrop is-open">
+    <div class="backdrop ">
       <div class="modal">
         <p class="modal-cta-paragraph">Leave your contacts and we will call you back</p>
         <button class="modal-close-btn" type="button" aria-label="modal close button">
@@ -479,8 +479,8 @@
         </form>
       </div>
     </div>
-
   </div>
+
 </body>
 
 
