--- a/index.html
+++ b/index.html
@@ -421,13 +421,14 @@
     <!-- ======================Backdrop============================== -->
     <div class="backdrop ">
       <div class="modal">
-        <p class="modal-cta-paragraph">Leave your contacts and we will call you back</p>
         <button class="modal-close-btn" type="button" aria-label="modal close button">
           <svg class="modal-close-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <form>
+        <p class="modal-cta-paragraph">Leave your contacts and we will call you back</p>
+
+        <form class="form-modal">
           <div class="cta-form-wrapper">
             <label class="cta-form-label" for="user-first-name">Name
             </label>
