--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
   </footer>
 
   <!-- ======================Backdrop============================== -->
-  <div class="backdrop ">
+  <div class="backdrop is-open">
     <div class="modal">
       <button class="modal-close-btn" type="button" aria-label="modal close button">
         <svg class="modal-close-btn-icon" width="8" height="8">
@@ -430,12 +430,12 @@
 
       <form class="form-modal">
         <div class="cta-form-wrapper">
-          <label class="cta-form-label" for="user-first-name">Name
+          <label class="cta-form-label" for="user-name">Name
           </label>
           <div class="cta-form-input-icon-wrapper">
-            <input class="cta-form-input" type="text" name="user_first_name" id="user-first-name" required
+            <input class="cta-form-input" type="text" name="user_name" id="user-name" required
               pattern="[a-zA-Zа-яА-ЯІіЇїєЄҐґйЙ']+" title="Nataliia">
-            <svg class="cta-form-input-icon" width="18" height="18">
+            <svg class="cta-form-input-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-person"></use>
             </svg>
           </div>
@@ -445,7 +445,7 @@
           <div class="cta-form-input-icon-wrapper">
             <input class="cta-form-input" type="tel" name="user_telephone" id="user-telephone" required
               pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx">
-            <svg class="cta-form-input-icon" width="18" height="18">
+            <svg class="cta-form-input-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>
           </div>
@@ -454,19 +454,19 @@
           <label class="cta-form-label" for="user-email">Email</label>
           <div class="cta-form-input-icon-wrapper">
             <input class="cta-form-input" type="email" name="user_email" id="user-email" required>
-            <svg class="cta-form-input-icon" width="18" height="18">
+            <svg class="cta-form-input-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
           </div>
         </div>
-        <div class="cta-form-wrapper">
-          <label class="cta-form-label" for="comment">Comment</label>
-          <textarea class="cta-form-textarea" id="comment" placeholder="Text input" name="comment"></textarea>
+        <div class="cta-form-wrapper txt">
+          <label class="cta-form-label" for="user-comment">Comment</label>
+          <textarea class="cta-form-textarea" id="user-comment" placeholder="Text input" name="user_comment"></textarea>
         </div>
         <div class="cta-checkbox-wrapper">
-          <input class="cta-checkbox visually-hidden" type="checkbox" name="privat_policy_check" value="true"
-            id="privat-policy-check" required>
-          <label class="cta-checkbox-label" for="privat-policy-check">
+          <input class="cta-checkbox visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy"
+            required>
+          <label class="cta-checkbox-label" for="user-privacy">
             <span class="cta-own-checkbox">
               <svg class="cta-own-checkbox-icon" width="10" height="8">
                 <use href="./images/icons.svg#icon-check"></use>
