--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
           <label class="cta-form-label" for="user-name">Name
           </label>
           <div class="cta-form-input-icon-wrapper">
-            <input class="cta-form-input" type="text" name="user_name" id="user-name" required
+            <input class="cta-form-input" type="text" name="user-name" id="user-name" required
               pattern="[a-zA-Zа-яА-ЯІіЇїєЄҐґйЙ']+" title="Nataliia">
             <svg class="cta-form-input-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-person"></use>
@@ -459,9 +459,9 @@
             </svg>
           </div>
         </div>
-        <div class="cta-form-wrapper txt">
+        <div class="cta-form-wrapper-txt">
           <label class="cta-form-label" for="user-comment">Comment</label>
-          <textarea class="cta-form-textarea" id="user-comment" placeholder="Text input" name="user_comment"></textarea>
+          <textarea class="cta-form-textarea" id="user-comment" placeholder="Text input" name="user-comment"></textarea>
         </div>
         <div class="cta-checkbox-wrapper">
           <input class="cta-checkbox visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy"
